fixes layout issues

--- a/_sass/uno.scss
+++ b/_sass/uno.scss
@@ -869,7 +869,7 @@ i {
   .navigation-wrapper {
     display: none;
     position: fixed;
-    top: 0;
+    top: 15px;
     right: 0;
     left: 0;
     width: 100%;
